--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Exercises from Eloquent Javascript book",
   "main": "index.js",
   "dependencies": {
-    "chai": "^4.1.2"
+    "chai": "^4.1.2",
+    "sinon": "^6.1.4"
   },
   "devDependencies": {
     "mocha": "^5.2.0"
