--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "chai": "^4.1.2",
+    "npm": "^6.2.0",
     "sinon": "^6.1.4"
   },
   "devDependencies": {
